TODO
* list and write - set is also used by read callback
  have flag that tells function to initiate write callback ?
* rewrite
  - update libfdata_tree_initialize
* add callback to calculate cache index ?
  - allow to be NULL by default and fallback to default behavior
  - separate set function
* add tests
* update include header and man page
  - list
  - list element (update)
  - range list
  - stream (done)
  - tree
  - tree node
  - vector
  - other

Types:
* list
  - reimplement libfdata_list_get_element_index_at_value_index ?
  - prepend: optimize recalculation of element index ?
  - add stream like read/write buffer ?
  - add libfdata_list_set_element_by_index_with_mapped_size
  - add libfdata_list_prepend_element_with_mapped_size
  - add libfdata_list_set_element_at_offset
  - write on set value ? what about create ?
  - add calculate_cache_entry_index support
  - implement libfdata_list_read_buffer and libfdata_list_seek_offset ?
  - add a function to look for data range offset instead of relative list offset
    libfdata_list_get_element_value_at_offset ?
* range list
  - work in progress
* stream
  - add mapped offset support ?
* tree
  - refactor
  - add mapped offset support ?
* tree node
  - refactor
  - add mapped offset support ?
  - allow to invalidate sub nodes data range?
* vector
  - refactor
  - write on set value ? what about create ?

Optimizations:
* mapped ranges
  - optimize calculations by adding flag to mapped range ?
    LIBFDATA_MAPPED_RANGE_FLAG_IS_INVALID

20140130
* small fix in stream header file

20140126
* list fixed multi file caching issue

20140105
* 2014 update
* updated dependencies

20130929
* worked on tree and tree node
* updated dependencies

20130922
* worked on tree and tree node

20130915
* worked on tree and tree node

20130908
* updated dependencies
* fixed memory leak in error path
* updated msvscpp files
* added libcthreads build support

20130718
* remove unnecessary restriction in library include headers
