@@ -342,6 +342,22 @@ int libfdata_stream_get_segment_index_at_offset(
      off64_t *segment_data_offset,
      libfdata_error_t **error );
 
+/* Retrieves the segment for a specific offset
+ * The segment_data_offset value is set to the offset relative to the start of the segment
+ * Returns 1 if successful, 0 if not or -1 on error
+ */
+LIBFDATA_EXTERN \
+int libfdata_stream_get_segment_at_offset(
+     libfdata_stream_t *stream,
+     off64_t offset,
+     int *segment_index,
+     off64_t *segment_data_offset,
+     int *segment_file_index,
+     off64_t *segment_offset,
+     size64_t *segment_size,
+     uint32_t *segment_flags,
+     libfdata_error_t **error );
+
 /* Reads data from the current offset into a buffer
  * Returns the number of bytes read or -1 on error
  */
