@@ -1,4 +1,4 @@
-.Dd January 5, 2014
+.Dd February 5, 2014
 .Dt libfdata 3
 .Os libfdata
 .Sh NAME
@@ -72,6 +72,8 @@ Stream functions
 .Fn libfdata_stream_append_segment "libfdata_stream_t *stream, int *segment_index, int segment_file_index, off64_t segment_offset, size64_t segment_size, uint32_t segment_flags, libfdata_error_t **error"
 .Ft int
 .Fn libfdata_stream_get_segment_index_at_offset "libfdata_stream_t *stream, off64_t data_offset, int *segment_index, off64_t *segment_data_offset, libfdata_error_t **error"
+.Ft int
+.Fn libfdata_stream_get_segment_at_offset "libfdata_stream_t *stream, off64_t offset, int *segment_index, off64_t *segment_data_offset, int *segment_file_index, off64_t *segment_offset, size64_t *segment_size, uint32_t *segment_flags, libfdata_error_t **error"
 .Ft ssize_t
 .Fn libfdata_stream_read_buffer "libfdata_stream_t *stream, intptr_t *file_io_handle, uint8_t *buffer, size_t buffer_size, uint8_t read_flags, libfdata_error_t **error"
 .Ft ssize_t
